--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: secretary
-description: A sample command-line application.
+description: A sophisticated tool for managing queues of asynchronous tasks, with a stream interface, strong typing and lots of helpful options.
 version: 0.1.0
-# homepage: https://www.example.com
+homepage: https://github.com/alexobviously/secretary
 
 environment:
   sdk: '>=2.17.1 <3.0.0'
