Recurring task tests

--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -27,3 +27,6 @@ jobs:
 
       - name: Retry Policy Tests
         run: dart test test/retry_policy_test.dart
+
+      - name: Recurring Task Tests
+        run: dart test test/recurring_test.dart
