--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: secretary
 description: A sophisticated tool for managing queues of asynchronous tasks, with a stream interface, strong typing and lots of helpful options.
 version: 0.2.2
-homepage: https://github.com/alexobviously/secretary
+repository: https://github.com/alexobviously/secretary
 
 environment:
   sdk: '>=2.17.1 <3.0.0'
