--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   colorize: ^3.0.0
+  elegant: ^0.0.7
   rest_client:
     git:
       url: https://github.com/alexobviously/rest_client
