--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,23 @@
 
 include: package:lints/recommended.yaml
 
+linter:
+  rules:
+    always_declare_return_types: true
+    constant_identifier_names: true
+    library_private_types_in_public_api: false
+    noop_primitive_operations: true
+    prefer_single_quotes: true
+    prefer_final_fields: true
+    prefer_final_locals: true
+    require_trailing_commas: true
+    sort_pub_dependencies: true
+    strict_top_level_inference: true
+    unawaited_futures: true
+    unnecessary_to_list_in_spreads: true
+    use_null_aware_elements: true
+    use_super_parameters: true
+    use_truncating_division: true
+
 formatter:
   trailing_commas: preserve
