--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,11 +4,11 @@ version: 0.1.0
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.10.0
 
 dependencies:
   colorize: ^3.0.0
-  elegant: ^0.0.7
+  elegant: ^1.0.0
   rest_client:
     git:
       url: https://github.com/alexobviously/rest_client
