--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,19 @@
 name: secretary
 description: A sophisticated tool for managing queues of asynchronous tasks, with a stream interface, strong typing and lots of helpful options.
 repository: https://github.com/alexobviously/secretary
-version: 1.2.0
+version: 1.2.1
 
 topics:
   - queue
   - async
 
 environment:
-  sdk: '>=3.8.0 <4.0.0'
+  sdk: ^3.10.0
+
+dependencies:
+  elegant: ^1.0.0
 
 dev_dependencies:
   lints: ^6.0.0
-  test: ^1.26.2
-dependencies:
-  elegant: ^0.0.7
+  test: ^1.28.0
+
